--- a/styles.css
+++ b/styles.css
@@ -114,8 +114,39 @@ button{
 
 .white1{
     padding: 20px;
+    background-color: whitesmoke;
 }
 
 .random p{
     text-align: center;
+}
+
+.darkgrey{
+    background-color: #E5E7EB;
+    display: flex;
+    align-items: center;
+    padding-bottom: 70px;
+    padding-top: 70px;
+}
+
+.quote{
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 700px;
+    position: relative;
+    padding-bottom: 50px;
+}
+
+.quote p{
+    font-style: italic;
+    font-size: 36px;
+    color: #1F2937;
+}
+
+.quote .thor{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    font-size: 33px;
+    font-weight: 700;
 }
